frontend/css/styles.css
body{
    margin:0;
    font-family: Arial, Helvetica, sans-serif;
    background:#f5f6fa;
    overflow:hidden;
}
/* NAVBAR */

.navbar{
    width:100%;
    background: linear-gradient(90deg,#7b4ce2,#8a5cf6);
    color:white;

    display:flex;
    justify-content:space-between;
    align-items:center;

    padding:18px 80px;
    box-sizing:border-box;

    box-shadow:0 4px 12px rgba(0,0,0,0.1);
}

.logo{
    font-size:32px;
    font-weight:bold;
}

.page-content{
    padding:40px;
}


.nav-links{
    display:flex;
    gap:30px;
}

.nav-links a{
    color:white;
    text-decoration:none;
    font-size:16px;
}

.nav-links a:hover{
    opacity:0.8;
}

.container{
    max-width:1200px;
    margin:auto;
    padding:40px 20px;
}

/* headings */

h1{
    font-size:48px;
    margin-bottom:20px;
}

h2{
    margin-top:30px;
}

h3{
    margin-top:20px;
}

/* links */

a{
    color:#6a5acd;
    text-decoration:none;
    font-weight:500;
}

a:hover{
    text-decoration:underline;
}

/* buttons */

button{
    padding:10px 18px;
    border-radius:8px;
    border:none;
    cursor:pointer;
    background:#7b4ce2;
    color:white;
    font-weight:500;
}

button:hover{
    background:#6936e2;
}

/* confidence bar */

.confidence-container{
    width:100%;
    height:20px;
    background:#ddd;
    border-radius:8px;
}

#confidenceBar{
    height:100%;
    width:0%;
    background:#4CAF50;
    border-radius:8px;
}

/* video */

video{
    border-radius:14px;
    box-shadow:0 8px 20px rgba(0,0,0,0.15);
}

/* ISL layout */

.isl-container{
    display:flex;
    gap:40px;
    align-items:stretch;
    margin-top:30px;
    height:calc(100vh - 180px);
}

/* camera */

.camera-section{
    flex:1;
}

.camera-section video{
    width:100%;
    height:100%;
    object-fit:cover;
    border-radius:12px;
}

/* prediction panel */

.prediction-section{
    flex:1;
    display:flex;
    flex-direction:column;
    justify-content:space-between;
}

/* cards */

.card{
    background:white;
    padding:20px;
    border-radius:12px;
    margin-bottom:20px;
    box-shadow:0 6px 18px rgba(0,0,0,0.08);
    padding:16px;
}

.card:hover{
    transform:translateY(-2px);
    box-shadow:0 10px 24px rgba(0,0,0,0.12);
}

.card h3{
    margin-top:0;
}

/* buttons */

.button-row{
    display:flex;
    gap:20px;
}

.button-row button{
    flex:1;
}

/* responsive */

@media (max-width:768px){

    .isl-container{
        flex-direction:column;
    }

    .camera-section video{
        width:100%;
    }

}

